--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link rel="stylesheet" href="">
 
         <!--=============== CSS ===============-->
-        <link rel="stylesheet" href="Urgentcombinar/css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
 
         <title>Urgentcombinar</title>
     </head>
@@ -23,7 +23,7 @@
     <header class="header" id="header">
         <nav class="nav container">
             <a href="#" class="nav__logo">
-                <img src="./Urgentcombinar/img/logo urgentcombinar.png" alt="">
+                <img src="./img/logo urgentcombinar.png" alt="">
             </a>
 
             <div class="nav__menu" id="nav-menu">
@@ -66,12 +66,97 @@
     <main class="main">
         <!--==================== HOME ====================-->
         <section class="home section" id="inico">
+            <div class="home__container container grid">
+                <div class="home__content grid">
+                    <div class="home__data">
+                        <h1 class="home__title">
+                            Transformamos <br>
+                            Projetos em
+                            Realidade!
+                        </h1>
 
+                        <p class="home__description">
+                            Projetos personalizados e soluções inovadoras 
+                            <br> para transformar seus sonhos em realidade.
+                        </p>
+
+                        <div class="home__buttons">
+                            <a href="#contacto" class="button">Entre em cotacto</a>
+
+                            <a href="#projetos" class="button__link">
+                                <span>Nossos Projetos</span>
+                                <i class="ri-arrow-right-line"></i>
+                            </a>   
+                        </div>
+                    </div>
+
+                    <div class="home__info">
+                        <div>
+                            <h3 class="home__info-title">+500</h3>
+                            <p class="home__info-description">Projetos <br> realizados</p>
+                        </div>
+
+                        <div>
+                            <h3 class="home__info-title">+100</h3>
+                            <p class="home__info-description">Projetos em <br> andamento</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="home__images">
+                    <img src="./img/home-img 1.png" alt="image" class="home__img-1">
+                    <img src="./img/homo-img 2.png" alt="image" class="home__img-2">
+                </div>
+            </div>
         </section>
 
         <!--==================== ABOUT ====================-->
         <section class="about section" id="sobre">
+            <div class="about__container container grid">
+                <div class="about__data">
+                    <span class="section__subtitle">20 Anos <br> Construindo o Futuro</span>
+                    <h2 class="section__title">
+                        Construindo Confiança <br> e Excelência há 20 Anos
+                    </h2>
 
+                    <p class="about__description">
+                        Fundada em 2004, a Urgente Combinar se tornou uma referência no mercado da 
+                        construção civil, oferecendo soluções inovadoras e resultados de alta qualidade. 
+                        Com 20 anos de experiência, nossa empresa é movida pela paixão de transformar 
+                        projetos em realidade e pelo compromisso de superar as expectativas de nossos 
+                        clientes.
+                    </p>
+
+                    <ul class="about__list grid">
+                        <li class="about__list-item">
+                            <i class="ri-checkbox-circle-line"></i>
+                            <span>Profissionais de qualificados</span>
+                        </li>
+
+                        <li class="about__list-item">
+                            <i class="ri-checkbox-circle-line"></i>
+                            <span>Qualidade garantida</span>
+                        </li>
+
+                        <li class="about__list-item">
+                            <i class="ri-checkbox-circle-line"></i>
+                            <span> Duas décadas de experiência</span>
+                        </li>
+
+                        <li class="about__list-item">
+                            <i class="ri-checkbox-circle-line"></i>
+                            <span> Nós orçamos o seu projeto</span>
+                        </li>
+                    </ul>
+
+                    <a href="#projetos" class="button">Nossos projetos</a>
+                </div>
+
+                <div class="about__images">
+                    <img src="./img/about-img1.png" alt="" class="about__img-1">
+                    <img src="./img/about-img2.png" alt="" class="about__img-2">
+                </div>
+            </div>
         </section>
 
         <!--==================== SERVICES ====================-->
@@ -105,6 +190,6 @@
     <script src=""></script>
 
     <!--=============== MAIN JS ===============-->
-    <script src="Urgentcombinar/js/main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
